--- a/preseed.cfg
+++ b/preseed.cfg
@@ -14,6 +14,7 @@ d-i keyboard-configuration/xkb-keymap select us
 ### Network configuration
 d-i netcfg/choose_interface select auto
 d-i netcfg/get_hostname string vagrant-debian-wheezy
+d-i netcfg/hostname string vagrant-debian-wheezy
 d-i netcfg/get_domain string vagrantup.com
 d-i netcfg/wireless_wep string
 
@@ -57,7 +58,7 @@ d-i apt-setup/volatile_host string volatile.debian.org
 ### Package selection
 tasksel tasksel/first multiselect
 
-d-i pkgsel/include string openssh-server build-essential nfs-common puppet ruby ruby-dev rubygems ssh ca-certificates curl
+d-i pkgsel/include string openssh-server build-essential nfs-common ssh ca-certificates curl
 d-i pkgsel/upgrade select safe-upgrade
 
 popularity-contest popularity-contest/participate boolean false
